src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/no_sraa.php
<?php

return [
    'expectedError' => "Required property 'sraa' is missing",
    'expectedPropertyPath' => '(root)',
    'configuration' => [
        'gateway' => [],
        'raa' => [],
    ]
];
